# FEDDLib

./: .gitignore  README.md  TPLsList.cmake
cmake/TPLs/: FindTPLpybind11.cmake
feddlib/amr/: AdaptiveMeshRefinement_decl.hpp  AdaptiveMeshRefinement_def.hpp  ErrorEstimation_decl.hpp  ErrorEstimation_def.hpp  RefinementFactory_def.hpp
feddlib/amr/tests/flagTest/: refinementFlag_uniform.cpp
feddlib/amr/tests/steadyNavierStokesAdaptive/: parametersProblem.xml
feddlib/amr/tests/stokesAdaptive/: main.cpp
feddlib/core/: CMakeLists.txt
feddlib/core/AceFemAssembly/: AssembleFEBlock_decl.hpp  AssembleFEFactory_decl.hpp  AssembleFEFactory_def.hpp  AssembleFE_decl.hpp  CMakeLists.txt
feddlib/core/AceFemAssembly/specific/: AssembleFEGeneralizedNewtonian.cpp  AssembleFEGeneralizedNewtonian.hpp  AssembleFEGeneralizedNewtonian_decl.hpp  AssembleFEGeneralizedNewtonian_def.hpp  AssembleFENavierStokesNonNewtonian_decl.hpp  AssembleFENavierStokesNonNewtonian_def.hpp  AssembleFENavierStokes_decl.hpp  AssembleFENavierStokes_def.hpp  AssembleFENonLinLaplace.cpp  AssembleFENonLinLaplace.hpp  AssembleFENonLinLaplace_decl.hpp  AssembleFENonLinLaplace_def.hpp  AssembleFE_Laplace_decl.hpp  AssembleFE_Laplace_def.hpp  AssembleFE_LinElas_decl.hpp  AssembleFE_NonLinElas2_decl.hpp  AssembleFE_NonLinElas_decl.hpp  AssembleFE_SCI_NH_decl.hpp  AssembleFE_SCI_SMC_Active_Growth_Reorientation_decl.hpp  AssembleFE_SCI_SMC_MLCK_decl.hpp  CMakeLists.txt
feddlib/core/AceFemAssembly/specific/GeneralizedNewtonianModels/: CarreauYasuda.cpp  CarreauYasuda.hpp  CarreauYasuda_decl.hpp  CarreauYasuda_def.hpp  Dimless_Carreau.cpp  Dimless_Carreau.hpp  Dimless_Carreau_decl.hpp  Dimless_Carreau_def.hpp  PowerLaw.cpp  PowerLaw.hpp  PowerLaw_decl.hpp  PowerLaw_def.hpp
feddlib/core/AceFemAssembly/tests/: CMakeLists.txt  fe_test_laplace.cpp  fe_test_linElas.cpp  fe_test_navierstokes.cpp  fe_test_nonLinElas.cpp  parametersProblemNonLinElas.xml
feddlib/core/FE/: Ace_def.hpp  CMakeLists.txt  Domain_decl.hpp  Domain_def.hpp  FE_decl.hpp  FE_def.hpp  Helper.cpp  Helper.hpp
feddlib/core/FE/ace_layer/: AceFEMDataLayer.cpp  AceGenElement.cpp  SMSUtility.c  ace_layer.hpp  sms.h
feddlib/core/General/: CMakeLists.txt  DifferentiableFuncClass.cpp  DifferentiableFuncClass.hpp  DifferentiableFuncClass_decl.hpp  DifferentiableFuncClass_def.hpp  InputToOutputMappingClass.cpp  InputToOutputMappingClass.hpp  InputToOutputMappingClass_decl.hpp  InputToOutputMappingClass_def.hpp
feddlib/core/General/tests/: CMakeLists.txt
feddlib/core/LinearAlgebra/: Map_def.hpp
feddlib/core/Mesh/: MeshPartitioner_def.hpp  MeshStructured_def.hpp  MeshUnstructured_decl.hpp  MeshUnstructured_def.hpp  Mesh_decl.hpp  Mesh_def.hpp
feddlib/core/Mesh/tests/: CMakeLists.txt  mesh_flag_write.cpp  mesh_unstructured_meshOrientation.cpp  mesh_unstructured_preProcessing.cpp  mesh_unstructured_writeMesh.cpp
feddlib/problems/: CMakeLists.txt
feddlib/problems/Ace/: CMakeLists.txt  main.cpp  main2.cpp
feddlib/problems/Ace/new_lib/: CMakeLists.txt
feddlib/problems/Ace/new_lib/include/: new_lib.hpp
feddlib/problems/Ace/new_lib/src/: new_lib.cpp
feddlib/problems/Solver/: LinearSolver_def.hpp
feddlib/problems/examples/: CMakeLists.txt
feddlib/problems/examples/nonconforming/: CMakeLists.txt  main.cpp
feddlib/problems/examples/steadyGeneralizedNewtonian_PowerLaw/: CMakeLists.txt  Simple_Straight_3D_Pipe_27_03_2024.mesh  main.cpp  parametersProblem.xml  rectangle_200.mesh
feddlib/problems/examples/steadyNavierStokes/: parametersProblem.xml
feddlib/problems/examples/stokes/: main.cpp
feddlib/problems/specific/: ACE.cpp  ACE.hpp  ACE_decl.hpp  ACE_def.hpp  CMakeLists.txt  NavierStokesAssFE_decl.hpp  NavierStokesAssFE_def.hpp  NonLinLaplace.cpp  NonLinLaplace.hpp  NonLinLaplace_decl.hpp  NonLinLaplace_def.hpp  Stokes_decl.hpp  Stokes_def.hpp
feddlib/problems/tests/: CMakeLists.txt
feddlib/problems/tests/nonLinLaplace/: CMakeLists.txt  main.cpp  parametersPrec.xml  parametersProblem.xml
feddlib/problems/tests/unsteadyNavierStokesAssFE/: parametersProblem.xml
feddlib/problems/tests/unsteadyNonLinTPM/: main.cpp
meshes/geoFiles/simple_geometries/: big_rectangle.geo
